Separate ready mesh preparation from atomic scene edits