@@ -1,19 +1,18 @@
 package dev.comfyfluffy.caustica.minecraft.rendering.entity;
 
-import dev.comfyfluffy.caustica.api.geometry.GeometryChannel;
 import dev.comfyfluffy.caustica.api.geometry.GeometryTransform;
 import dev.comfyfluffy.caustica.api.geometry.InstanceId;
 import dev.comfyfluffy.caustica.api.geometry.MeshBuild;
-import dev.comfyfluffy.caustica.api.geometry.MeshId;
 import dev.comfyfluffy.caustica.api.vulkan.VulkanDeviceAddress;
 import dev.comfyfluffy.caustica.api.vulkan.VulkanDeviceAddressRange;
 import dev.comfyfluffy.caustica.api.program.SurfaceId;
-import dev.comfyfluffy.caustica.api.retained.RetainedBatch;
 import dev.comfyfluffy.caustica.api.resource.ResourceRef;
 import dev.comfyfluffy.caustica.api.scene.SceneId;
 import dev.comfyfluffy.caustica.minecraft.api.program.MinecraftProgramTypes;
 import dev.comfyfluffy.caustica.settings.ResourceId;
 import org.junit.jupiter.api.Test;
+import dev.comfyfluffy.caustica.minecraft.rendering.PreparedScene;
+import dev.comfyfluffy.caustica.api.scene.SceneEdit;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -27,406 +26,170 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 final class MinecraftEntityGeometryTest {
-    @Test
-    void updateGroupReturnsTheNativePublicationReceipt() {
-        RecordingChannel channel = new RecordingChannel();
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> new Uploaded(0x900L));
-        var key = new MinecraftEntityGeometry.Key(2, 1);
-
-        dev.comfyfluffy.caustica.api.retained.RetainedPublication publication;
-        try (MinecraftEntityGeometry.UpdateGroup updates = geometry.beginUpdateGroup()) {
-            geometry.put(key, revision(1), mesh(), GeometryTransform.translation(1, 2, 3), 0xff);
-            publication = updates.submit();
-        }
-
-        assertSame(channel.publication, publication);
-        assertFalse(publication.isVisible());
-        channel.publication.makeVisible();
-        assertTrue(publication.isVisible());
-    }
-
-    @Test
-    void compatibleReplacementKeepsMeshIdentityAndPlacementInOneAtomicBatch() {
-        RecordingChannel channel = new RecordingChannel();
-        Uploaded first = new Uploaded(0x1000L);
-        Uploaded second = new Uploaded(0x2000L);
-        var uploads = new ArrayList<>(List.of(first, second));
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> uploads.removeFirst());
-        var key = new MinecraftEntityGeometry.Key(2, 7);
-
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(10, 20, 30), 0xff);
-        geometry.put(key, revision(2), mesh(), GeometryTransform.translation(10, 20, 30), 0xff);
-
-        assertEquals(1, channel.batches.size());
-        assertEquals(1, channel.groups.size());
-        var initial = channel.batches.get(0).operations();
-        var replacement = channel.groups.getFirst().getFirst().operations();
-        assertEquals(2, initial.size());
-        assertEquals(2, replacement.size());
-        var initialMesh = assertInstanceOf(GeometryChannel.SetMesh.class, initial.get(0));
-        var initialPlacement = assertInstanceOf(GeometryChannel.SetInstance.class, initial.get(1));
-        var replacementMesh = assertInstanceOf(GeometryChannel.SetMesh.class, replacement.get(0));
-        var replacementPlacement = assertInstanceOf(GeometryChannel.SetInstance.class, replacement.get(1));
-        assertSame(initialMesh.mesh(), replacementMesh.mesh());
-        assertSame(initialPlacement.instance(), replacementPlacement.instance());
-        assertEquals(GeometryTransform.translation(10, 20, 30), replacementPlacement.transform());
-    }
-
-    @Test
-    void topologyChangeKeepsTheResidentsLogicalMeshIdentity() {
-        RecordingChannel channel = new RecordingChannel();
-        var uploads = new ArrayList<>(List.of(new Uploaded(0x2100L), new Uploaded(0x2200L)));
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> uploads.removeFirst());
-        var key = new MinecraftEntityGeometry.Key(2, 8);
-
-        geometry.put(key, new MinecraftEntityGeometry.MeshRevision(0, 1, 17), mesh(),
-                GeometryTransform.translation(10, 20, 30), 0xff);
-        geometry.put(key, new MinecraftEntityGeometry.MeshRevision(0, 2, 18), mesh(),
-                GeometryTransform.translation(10, 20, 30), 0xff);
-
-        var initial = channel.batches.get(0).operations();
-        var replacement = channel.groups.getFirst().getFirst().operations();
-        assertSame(assertInstanceOf(GeometryChannel.SetMesh.class, initial.get(0)).mesh(),
-                assertInstanceOf(GeometryChannel.SetMesh.class, replacement.get(0)).mesh());
-        assertEquals(2, replacement.size());
-    }
-
-    @Test
-    void equalMeshRevisionsRemainIsolatedAcrossIndependentPlacements() {
-        RecordingChannel channel = new RecordingChannel();
-        var uploaded = new ArrayList<>(List.of(new Uploaded(0x2800L), new Uploaded(0x3800L)));
-        int[] uploads = {0};
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> {
-            uploads[0]++;
-            return uploaded.removeFirst();
-        });
-        var first = new MinecraftEntityGeometry.Key(2, 1);
-        var second = new MinecraftEntityGeometry.Key(2, 2);
-
-        geometry.put(first, revision(7), mesh(), GeometryTransform.translation(1, 0, 0), 0xff);
-        geometry.put(second, revision(7), mesh(), GeometryTransform.translation(2, 0, 0), 0xff);
-
-        assertEquals(2, uploads[0]);
-        var firstMesh = assertInstanceOf(GeometryChannel.SetMesh.class,
-                channel.batches.get(0).operations().get(0));
-        var secondMesh = assertInstanceOf(GeometryChannel.SetMesh.class,
-                channel.batches.get(1).operations().get(0));
-        assertNotSame(firstMesh.mesh(), secondMesh.mesh());
-        assertEquals(2, channel.batches.get(1).operations().size());
-
-        geometry.drop(first);
-        assertInstanceOf(GeometryChannel.DropMesh.class, channel.batches.get(2).operations().get(1));
-        geometry.drop(second);
-        assertInstanceOf(GeometryChannel.DropMesh.class, channel.batches.get(3).operations().get(1));
-    }
-
-    @Test
-    void unchangedRevisionReusesTheSameResidentsMesh() {
-        RecordingChannel channel = new RecordingChannel();
-        int[] uploads = {0};
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> {
-            uploads[0]++;
-            return new Uploaded(0x4800L);
-        });
-        var key = new MinecraftEntityGeometry.Key(2, 3);
-
-        geometry.put(key, revision(7), mesh(), GeometryTransform.translation(1, 0, 0), 0xff);
-        geometry.put(key, revision(7), mesh(), GeometryTransform.translation(2, 0, 0), 0xff);
-
-        assertEquals(1, uploads[0]);
-        assertEquals(1, channel.batches.size());
-        assertEquals(GeometryTransform.translation(2, 0, 0),
-                channel.latestGroups.getFirst().getFirst().transform());
-    }
-
-    @Test
-    void unchangedRevisionAndPlacementDoNotUploadOrPublish() {
-        RecordingChannel channel = new RecordingChannel();
-        int[] uploads = {0};
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> {
-            uploads[0]++;
-            return new Uploaded(0x4900L);
-        });
-        var key = new MinecraftEntityGeometry.Key(2, 4);
-        GeometryTransform transform = GeometryTransform.translation(1, 2, 3);
-
-        geometry.put(key, revision(7), mesh(), transform, 0xff);
-        geometry.put(key, revision(7), mesh(), transform, 0xff);
-
-        assertEquals(1, uploads[0]);
-        assertEquals(1, channel.batches.size());
-    }
-
-    @Test
-    void unchangedTransformAndMaskDoNotPublish() {
-        RecordingChannel channel = new RecordingChannel();
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> new Uploaded(0x4a00L));
-        var key = new MinecraftEntityGeometry.Key(2, 5);
-        GeometryTransform transform = GeometryTransform.translation(1, 2, 3);
-        geometry.put(key, revision(7), mesh(), transform, 0xff);
-
-        geometry.transform(key, transform, 0xff);
-
-        assertEquals(1, channel.batches.size());
-    }
-
-    @Test
-    void frameUpdatesKeepCurrentUploadsOwnedAfterPublication() {
-        RecordingChannel channel = new RecordingChannel();
-        Uploaded firstUpload = new Uploaded(0x4b00L);
-        Uploaded secondUpload = new Uploaded(0x4c00L);
-        var uploads = new ArrayList<>(List.of(firstUpload, secondUpload));
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> uploads.removeFirst());
-
-        try (MinecraftEntityGeometry.UpdateGroup updates = geometry.beginUpdateGroup()) {
-            geometry.put(new MinecraftEntityGeometry.Key(2, 6), revision(1), mesh(),
-                    GeometryTransform.translation(1, 0, 0), 0xff);
-            geometry.put(new MinecraftEntityGeometry.Key(2, 7), revision(1), mesh(),
-                    GeometryTransform.translation(2, 0, 0), 0xff);
-            assertTrue(channel.groups.isEmpty());
-            updates.submit();
-        }
-
-        assertEquals(1, channel.groups.size());
-        assertEquals(2, channel.groups.getFirst().size());
-        channel.publication.makeVisible();
-        assertFalse(firstUpload.closed);
-        assertFalse(secondUpload.closed);
-    }
-
-    @Test
-    void acceptedReplacementReleasesDisplacedUploadBeforeVisibility() {
-        RecordingChannel channel = new RecordingChannel();
-        Uploaded first = new Uploaded(0x4c10L);
-        Uploaded second = new Uploaded(0x4c20L);
-        var uploads = new ArrayList<>(List.of(first, second));
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> uploads.removeFirst());
-        var key = new MinecraftEntityGeometry.Key(2, 70);
-
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(1, 0, 0), 0xff);
-        geometry.put(key, revision(2), mesh(), GeometryTransform.translation(2, 0, 0), 0xff);
-
-        assertFalse(channel.publication.isVisible());
+    @Test void replacementKeepsOldMeshAndUsesCurrentTransformWhenReady() {
+        var scene = new PreparedScene();
+        var uploads = new ArrayList<>(List.of(new Uploaded(0x1000), new Uploaded(0x2000)));
+        var first = uploads.getFirst();
+        var geometry = new MinecraftEntityGeometry(scene, scene, new SceneId() {}, ignored -> uploads.removeFirst());
+        var key = new MinecraftEntityGeometry.Key(1, 2);
+        int[] acknowledgments = {0};
+        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(0, 0, 0), 255,
+                () -> acknowledgments[0]++);
+        assertTrue(scene.edits.isEmpty());
+        assertEquals(0, acknowledgments[0]);
+        scene.jobs.get(0).complete();
+        flush(geometry);
+        assertEquals(1, acknowledgments[0]);
+        var initial = (SceneEdit.SetInstance<?>) scene.edits.getFirst().getFirst();
+        geometry.put(key, revision(2), mesh(), GeometryTransform.translation(1, 0, 0), 255);
+        geometry.transform(key, GeometryTransform.translation(9, 0, 0), 127);
+        assertFalse(first.closed);
+        assertInstanceOf(SceneEdit.SetTransform.class, scene.edits.getLast().getFirst());
+        scene.jobs.get(1).complete();
+        flush(geometry);
+        var replacement = (SceneEdit.SetInstance<?>) scene.edits.getLast().getFirst();
+        assertSame(initial.instance(), replacement.instance());
+        assertNotSame(initial.mesh(), replacement.mesh());
+        assertEquals(GeometryTransform.translation(9, 0, 0), replacement.transform());
+        assertEquals(127, replacement.mask());
         assertTrue(first.closed);
-        assertFalse(second.closed);
+        assertEquals(1, scene.jobs.get(0).releases);
+        geometry.close();
     }
 
-    @Test
-    void rejectedFrameGroupRestoresResidentsAndClosesUnacceptedUploads() {
-        RecordingChannel channel = new RecordingChannel();
-        Uploaded rejected = new Uploaded(0x4d00L);
-        Uploaded retry = new Uploaded(0x4e00L);
-        var uploads = new ArrayList<>(List.of(rejected, retry));
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> uploads.removeFirst());
-        var key = new MinecraftEntityGeometry.Key(2, 8);
-        channel.rejectNextGroup = true;
-
-        MinecraftEntityGeometry.UpdateGroup updates = geometry.beginUpdateGroup();
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(1, 0, 0), 0xff);
-        assertThrows(IllegalStateException.class, updates::submit);
-        assertTrue(rejected.closed);
-
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(1, 0, 0), 0xff);
-        assertEquals(1, channel.batches.size());
-        assertFalse(retry.closed);
-    }
-
-    @Test
-    void rejectedCompatibleReplacementKeepsTheStableMeshRetryable() {
-        RecordingChannel channel = new RecordingChannel();
-        Uploaded initial = new Uploaded(0x4e10L);
-        Uploaded rejected = new Uploaded(0x4e20L);
-        Uploaded retry = new Uploaded(0x4e30L);
-        var uploads = new ArrayList<>(List.of(initial, rejected, retry));
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> uploads.removeFirst());
-        var key = new MinecraftEntityGeometry.Key(2, 80);
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(1, 0, 0), 0xff);
-        Object stableMesh = assertInstanceOf(GeometryChannel.SetMesh.class,
-                channel.batches.getFirst().operations().getFirst()).mesh();
-        channel.rejectNextGroup = true;
-
-        MinecraftEntityGeometry.UpdateGroup updates = geometry.beginUpdateGroup();
-        geometry.put(key, revision(2), mesh(), GeometryTransform.translation(2, 0, 0), 0xff);
-        assertThrows(IllegalStateException.class, updates::submit);
-        assertTrue(rejected.closed);
-
-        geometry.put(key, revision(2), mesh(), GeometryTransform.translation(2, 0, 0), 0xff);
-        assertSame(stableMesh, assertInstanceOf(GeometryChannel.SetMesh.class,
-                channel.batches.getLast().operations().getFirst()).mesh());
-        assertFalse(retry.closed);
-    }
-
-    @Test
-    void rejectedReplacementAndLatestPlacementDoNotCloseAcceptedState() {
-        RecordingChannel channel = new RecordingChannel();
-        Uploaded initial = new Uploaded(0x4e30L);
-        Uploaded rejected = new Uploaded(0x4e40L);
-        var uploads = new ArrayList<>(List.of(initial, rejected));
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> uploads.removeFirst());
-        var key = new MinecraftEntityGeometry.Key(2, 801);
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(1, 0, 0), 0xff);
-        channel.rejectNextGroup = true;
-
-        assertThrows(IllegalStateException.class, () -> geometry.put(
-                key, revision(2), mesh(), GeometryTransform.translation(2, 0, 0), 0xff));
-
-        assertFalse(initial.closed);
-        assertTrue(rejected.closed);
-        assertEquals(1, channel.batches.size());
-        assertEquals(0, channel.groups.size());
-    }
-
-    @Test
-    void rejectedGroupWithRepeatedReplacementClosesIntroducedUploadsAndKeepsPrior() {
-        RecordingChannel channel = new RecordingChannel();
-        Uploaded prior = new Uploaded(0x4e40L);
-        Uploaded first = new Uploaded(0x4e50L);
-        Uploaded second = new Uploaded(0x4e60L);
-        var uploads = new ArrayList<>(List.of(prior, first, second));
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> uploads.removeFirst());
-        var key = new MinecraftEntityGeometry.Key(2, 81);
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(0, 0, 0), 0xff);
-        channel.rejectNextGroup = true;
-
-        MinecraftEntityGeometry.UpdateGroup updates = geometry.beginUpdateGroup();
-        geometry.put(key, revision(2), mesh(), GeometryTransform.translation(1, 0, 0), 0xff);
-        geometry.put(key, revision(3), mesh(), GeometryTransform.translation(2, 0, 0), 0xff);
-        assertThrows(IllegalStateException.class, updates::submit);
-
-        assertEquals(0, prior.closeCount);
-        assertEquals(1, first.closeCount);
-        assertEquals(1, second.closeCount);
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(3, 0, 0), 0xff);
-    }
-
-    @Test
-    void stagingFailureBeforeGroupAcceptanceClosesTheUntransferredUpload() {
-        RecordingChannel channel = new RecordingChannel();
-        Uploaded uploaded = new Uploaded(0x4f00L) {
-            @Override public MeshBuild<MinecraftProgramTypes.InstanceData> build() {
-                throw new IllegalStateException("broken build");
-            }
-        };
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> uploaded);
-
-        try (MinecraftEntityGeometry.UpdateGroup updates = geometry.beginUpdateGroup()) {
-            assertThrows(IllegalStateException.class, () -> geometry.put(
-                    new MinecraftEntityGeometry.Key(2, 9), revision(1), mesh(),
-                    GeometryTransform.translation(1, 0, 0), 0xff));
-            assertTrue(uploaded.closed);
-        }
-    }
-
-    @Test
-    void transformUsesLatestPlacementWithoutQueuingOrChangingTheMeshLifetime() {
-        RecordingChannel channel = new RecordingChannel();
-        Uploaded uploaded = new Uploaded(0x3000L);
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> uploaded);
-        var key = new MinecraftEntityGeometry.Key(1, 9);
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(0, 0, 0), 0xff);
-
-        geometry.transform(key, GeometryTransform.translation(1, 2, 3), 0x01);
-
-        assertEquals(1, channel.batches.size());
-        GeometryChannel.LatestInstance operation = channel.latestGroups.getFirst().getFirst();
-        assertEquals(GeometryTransform.translation(1, 2, 3), operation.transform());
-        assertEquals(0x01, operation.mask());
-        channel.publication.makeVisible();
-        assertFalse(uploaded.closed);
-    }
-
-    @Test
-    void everyUnchangedMeshFrameSubmitsItsLatestRigidPlacementWithoutUploading() {
-        RecordingChannel channel = new RecordingChannel();
-        int[] uploads = {0};
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> {
-            uploads[0]++;
-            return new Uploaded(0x3100L);
+    @Test void continuouslyChangingCapturesPublishAndOnlyPrepareTheNewestQueuedMesh() {
+        var scene = new PreparedScene();
+        var uploads = new ArrayList<Uploaded>();
+        var captured = new ArrayList<MinecraftEntityMesh>();
+        var accepted = new ArrayList<Integer>();
+        var geometry = new MinecraftEntityGeometry(scene, scene, new SceneId() {}, mesh -> {
+            captured.add(mesh);
+            var upload = new Uploaded(0x1000L * (uploads.size() + 1));
+            uploads.add(upload);
+            return upload;
         });
-        var key = new MinecraftEntityGeometry.Key(1, 10);
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(0, 0, 0), 0xff);
-
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(1, 0, 0), 0xff);
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(2, 0, 0), 0xff);
-
-        assertEquals(1, uploads[0]);
-        assertEquals(1, channel.batches.size());
-        assertEquals(2, channel.latestGroups.size());
-        assertEquals(GeometryTransform.translation(2, 0, 0),
-                channel.latestGroups.getLast().getFirst().transform());
-    }
-
-    @Test
-    void movementContinuesWhileAChangedMeshPublicationIsInvisible() {
-        RecordingChannel channel = new RecordingChannel();
-        var uploads = new ArrayList<>(List.of(new Uploaded(0x3200L), new Uploaded(0x3300L)));
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> uploads.removeFirst());
-        var key = new MinecraftEntityGeometry.Key(1, 11);
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(0, 0, 0), 0xff);
-        assertFalse(channel.publication.isVisible());
-
-        try (MinecraftEntityGeometry.UpdateGroup updates = geometry.beginUpdateGroup()) {
-            geometry.put(key, revision(2), mesh(), GeometryTransform.translation(1, 0, 0), 0xff);
-            updates.submit();
+        var key = new MinecraftEntityGeometry.Key(1, 2);
+        var firstMesh = mesh();
+        geometry.put(key, revision(1), firstMesh, GeometryTransform.translation(1, 0, 0), 255,
+                () -> accepted.add(1));
+        MinecraftEntityMesh newest = null;
+        for (int revision = 2; revision <= 100; revision++) {
+            newest = mesh();
+            int version = revision;
+            geometry.put(key, revision(version), newest, GeometryTransform.translation(version, 0, 0), 255,
+                    () -> accepted.add(version));
         }
-        try (MinecraftEntityGeometry.UpdateGroup updates = geometry.beginUpdateGroup()) {
-            geometry.put(key, revision(2), mesh(), GeometryTransform.translation(2, 0, 0), 0xff);
-            updates.submit();
+        assertEquals(1, scene.jobs.size());
+        assertEquals(List.of(firstMesh), captured);
+        scene.jobs.getFirst().complete();
+        flush(geometry);
+        assertEquals(List.of(1), accepted);
+        assertEquals(2, scene.jobs.size());
+        assertSame(newest, captured.getLast());
+        var initial = (SceneEdit.SetInstance<?>) scene.edits.getLast().getFirst();
+        assertEquals(GeometryTransform.translation(100, 0, 0), initial.transform());
+        assertSame(initial.mesh(), scene.jobs.get(1).refitSource);
+        assertFalse(uploads.getFirst().closed);
+
+        for (int revision = 101; revision <= 200; revision++) {
+            newest = mesh();
+            int version = revision;
+            geometry.put(key, revision(version), newest, GeometryTransform.translation(version, 0, 0), 255,
+                    () -> accepted.add(version));
         }
-
-        assertEquals(1, channel.groups.size());
-        assertEquals(GeometryTransform.translation(1, 0, 0),
-                channel.latestGroups.getFirst().getFirst().transform());
-        assertEquals(GeometryTransform.translation(2, 0, 0),
-                channel.latestGroups.getLast().getFirst().transform());
-    }
-
-    @Test
-    void removalDropsPlacementAndMeshTogether() {
-        RecordingChannel channel = new RecordingChannel();
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> new Uploaded(0x4000L));
-        var key = new MinecraftEntityGeometry.Key(2, 11);
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(0, 0, 0), 0xff);
-
-        geometry.drop(key);
-
-        var removal = channel.batches.get(1).operations();
-        assertEquals(2, removal.size());
-        assertInstanceOf(GeometryChannel.DropInstance.class, removal.get(0));
-        assertInstanceOf(GeometryChannel.DropMesh.class, removal.get(1));
-    }
-
-    @Test
-    void rejectedRemovalLeavesTheResidentRetryable() {
-        RecordingChannel channel = new RecordingChannel();
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> new Uploaded(0x5000L));
-        var key = new MinecraftEntityGeometry.Key(1, 12);
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(0, 0, 0), 0xff);
-        channel.rejectNext = true;
-
-        assertThrows(IllegalStateException.class, () -> geometry.drop(key));
-        geometry.drop(key);
-
-        assertEquals(2, channel.batches.size());
-        assertInstanceOf(GeometryChannel.DropInstance.class, channel.batches.get(1).operations().getFirst());
-    }
-
-    @Test
-    void rejectedStopDoesNotOrphanLiveResidents() {
-        RecordingChannel channel = new RecordingChannel();
-        var geometry = new MinecraftEntityGeometry(channel, new SceneId() { }, ignored -> new Uploaded(0x6000L));
-        var key = new MinecraftEntityGeometry.Key(1, 13);
-        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(0, 0, 0), 0xff);
-        channel.rejectNext = true;
-
-        assertThrows(IllegalStateException.class, geometry::stop);
-        geometry.transform(key, GeometryTransform.translation(4, 5, 6), 0xff);
+        assertEquals(2, scene.jobs.size());
+        scene.jobs.get(1).complete();
+        flush(geometry);
+        assertEquals(List.of(1, 100), accepted);
+        assertEquals(3, scene.jobs.size());
+        assertSame(newest, captured.getLast());
+        var replacement = (SceneEdit.SetInstance<?>) scene.edits.getLast().getFirst();
+        assertSame(initial.instance(), replacement.instance());
+        assertEquals(GeometryTransform.translation(200, 0, 0), replacement.transform());
+        assertSame(replacement.mesh(), scene.jobs.get(2).refitSource);
+        assertTrue(uploads.getFirst().closed);
         geometry.stop();
+        scene.jobs.get(2).complete();
+        geometry.close();
+        assertEquals(List.of(1, 100), accepted);
+        uploads.forEach(upload -> assertEquals(1, upload.closeCount));
+        scene.jobs.forEach(job -> assertEquals(1, job.releases));
+    }
 
-        assertEquals(2, channel.batches.size());
-        assertEquals(GeometryTransform.translation(4, 5, 6),
-                channel.latestGroups.getFirst().getFirst().transform());
-        assertInstanceOf(GeometryChannel.DropInstance.class, channel.batches.get(1).operations().getFirst());
+    @Test void droppedPreparationCannotReplaceARecreatedInstance() {
+        var scene = new PreparedScene();
+        var geometry = new MinecraftEntityGeometry(scene, scene, new SceneId() {}, ignored -> new Uploaded(0x1000));
+        var key = new MinecraftEntityGeometry.Key(1, 2);
+        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(0, 0, 0), 255);
+        geometry.put(key, revision(2), mesh(), GeometryTransform.translation(1, 0, 0), 255);
+        geometry.drop(key);
+        geometry.put(key, revision(3), mesh(), GeometryTransform.translation(3, 0, 0), 255);
+        assertEquals(2, scene.jobs.size());
+        scene.jobs.get(0).complete();
+        flush(geometry);
+        assertTrue(scene.edits.isEmpty());
+        assertEquals(1, scene.jobs.get(0).releases);
+        scene.jobs.get(1).complete();
+        flush(geometry);
+        var placement = (SceneEdit.SetInstance<?>) scene.edits.getLast().getFirst();
+        assertEquals(GeometryTransform.translation(3, 0, 0), placement.transform());
+        geometry.close();
+        assertEquals(1, scene.jobs.get(1).releases);
+    }
+
+    @Test void cancelledCaptureRestoresPendingPreparationAndDiscardsQueuedReplacement() {
+        var scene = new PreparedScene();
+        var geometry = new MinecraftEntityGeometry(scene, scene, new SceneId() {}, ignored -> new Uploaded(0x1000));
+        var key = new MinecraftEntityGeometry.Key(1, 2);
+        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(0, 0, 0), 255);
+        try (var group = geometry.beginUpdateGroup()) {
+            geometry.put(key, revision(2), mesh(), GeometryTransform.translation(1, 0, 0), 255);
+            scene.jobs.get(0).complete();
+        }
+        flush(geometry);
+        assertEquals(1, scene.edits.size());
+        assertEquals(1, scene.jobs.size());
+        var placement = (SceneEdit.SetInstance<?>) scene.edits.getLast().getFirst();
+        assertEquals(GeometryTransform.translation(0, 0, 0), placement.transform());
+        geometry.close();
+        assertEquals(1, scene.jobs.get(0).releases);
+    }
+
+    @Test void rejectedCaptureEditRestoresLiveAndPendingState() {
+        var scene = new PreparedScene();
+        var geometry = new MinecraftEntityGeometry(scene, scene, new SceneId() {}, ignored -> new Uploaded(0x1000));
+        var key = new MinecraftEntityGeometry.Key(1, 2);
+        geometry.put(key, revision(1), mesh(), GeometryTransform.translation(0, 0, 0), 255);
+        scene.jobs.get(0).complete();
+        flush(geometry);
+        try (var group = geometry.beginUpdateGroup()) {
+            geometry.put(key, revision(2), mesh(), GeometryTransform.translation(2, 0, 0), 255);
+            scene.reject = true;
+            assertThrows(IllegalStateException.class, group::submit);
+        }
+        scene.jobs.get(1).complete();
+        flush(geometry);
+        assertEquals(1, scene.edits.size());
+        assertEquals(1, scene.jobs.get(1).releases);
+        geometry.close();
+        assertEquals(1, scene.jobs.get(0).releases);
+    }
+
+    @Test void shutdownClosesLaterCompletionWithoutPublishing() {
+        var scene = new PreparedScene();
+        var upload = new Uploaded(0x1000);
+        var geometry = new MinecraftEntityGeometry(scene, scene, new SceneId() {}, ignored -> upload);
+        geometry.put(new MinecraftEntityGeometry.Key(1, 2), revision(1), mesh(),
+                GeometryTransform.translation(0, 0, 0), 255);
+        geometry.close();
+        scene.jobs.get(0).complete();
+        assertTrue(upload.closed);
+        assertEquals(1, scene.jobs.get(0).releases);
+        assertTrue(scene.edits.isEmpty());
+    }
+
+    private static void flush(MinecraftEntityGeometry geometry) {
+        try (var group = geometry.beginUpdateGroup()) { group.submit(); }
     }
 
     private static MinecraftEntityMesh mesh() {
@@ -473,70 +236,4 @@ final class MinecraftEntityGeometryTest {
         @Override public void close() { closed = true; closeCount++; }
     }
 
-    private static final class RecordingChannel implements GeometryChannel {
-        final List<RetainedBatch<Operation>> batches = new ArrayList<>();
-        final List<List<RetainedBatch<Operation>>> groups = new ArrayList<>();
-        final List<List<GeometryChannel.LatestInstance>> latestGroups = new ArrayList<>();
-        boolean rejectNext;
-        boolean rejectNextGroup;
-        final TestPublication publication = new TestPublication();
-
-        @Override public <N> MeshId<N> newMesh(dev.comfyfluffy.caustica.api.program.ShaderDataType<N> type) {
-            return new MeshId<>() { };
-        }
-
-        @Override public InstanceId newInstance() { return new InstanceId() { }; }
-
-        @Override public dev.comfyfluffy.caustica.api.retained.RetainedPublication submit(
-                RetainedBatch<Operation> batch) {
-            if (rejectNext) {
-                rejectNext = false;
-                throw new IllegalStateException("rejected");
-            }
-            batches.add(batch);
-            return publication;
-        }
-
-        @Override public dev.comfyfluffy.caustica.api.retained.RetainedPublication submitGroup(
-                List<RetainedBatch<Operation>> group) {
-            if (rejectNextGroup) {
-                rejectNextGroup = false;
-                throw new IllegalStateException("rejected group");
-            }
-            groups.add(List.copyOf(group));
-            return publication;
-        }
-        @Override public dev.comfyfluffy.caustica.api.retained.RetainedPublication submitGroupWithLatest(
-                List<RetainedBatch<Operation>> group, List<GeometryChannel.LatestInstance> latest) {
-            if (rejectNextGroup) {
-                rejectNextGroup = false;
-                throw new IllegalStateException("rejected group");
-            }
-            if (!group.isEmpty()) groups.add(List.copyOf(group));
-            latestGroups.add(List.copyOf(latest));
-            return publication;
-        }
-        @Override public dev.comfyfluffy.caustica.api.retained.RetainedPublication submitWithLights(
-                List<RetainedBatch<Operation>> geometryBatches,
-                dev.comfyfluffy.caustica.api.light.LightChannel lights,
-                RetainedBatch<dev.comfyfluffy.caustica.api.light.LightChannel.Operation> lightBatch) {
-            throw new UnsupportedOperationException();
-        }
-    }
-
-    private static final class TestPublication
-            implements dev.comfyfluffy.caustica.api.retained.RetainedPublication {
-        private final List<Runnable> callbacks = new ArrayList<>();
-        private boolean visible;
-        @Override public boolean isVisible() { return visible; }
-        @Override public void whenVisible(Runnable callback) {
-            if (visible) callback.run();
-            else callbacks.add(callback);
-        }
-        void makeVisible() {
-            visible = true;
-            callbacks.forEach(Runnable::run);
-            callbacks.clear();
-        }
-    }
 }
